fixed bookings message on venues, so that it is visible

--- a/src/CSS_Modules/VM_Profile/vmProfile.module.css
+++ b/src/CSS_Modules/VM_Profile/vmProfile.module.css
@@ -149,7 +149,7 @@
 }
 
 .bookingsMessage {
-  position: absolute;
+  position: static !important;
   background-color: var(--secondary-color) !important;
   color: var(--primary-color-1) !important;
 }
